# rust-tide-pg

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: labeler.yml
.github/issue_template/: bug_report.md  contributor_access.md
.github/workflows/: labeler.yml
scripts/: clean  compile  database  format  server  setup  stop  test
server/: .env  Cargo.toml
server/db/: create.sql
server/src/: lib.rs  main.rs
server/src/auth/: jwt.rs  password.rs
server/src/controllers/: auth.rs  movie.rs  user.rs
server/src/models/: movie.rs  user.rs
server/src/views/: auth.rs  mod.rs  movie.rs
server/tests/: test_movies.rs
server/tests/common/: mod.rs
