[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Gonzales <dylangonzales247@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "offline"] }
surf = "2.3.2"
tide = "0.16.0"
