[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Gonzales <dylangonzales247@gmail.com>"]
license = "MIT"
description = "Rust (Tide) API with a containerized PostgreSQL database"
homepage = "https://github.com/dgonzo27/rust-tide-pg"
repository = "https://github.com/dgonzo27/rust-tide-pg"
keywords = ["jwt", "api", "tide", "rust", "sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.56"
chrono = "0.4"
dotenv = "0.15"
http-types = "2.12.0"
jsonwebtoken = "8.1"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "offline"] }
surf = "2.3.2"
tide = "0.16.0"

[dev-dependencies]
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"